# controller/src/main/java/io/swagger/server/api/verticle/transfer/TransferControllerApi.java
@@ -1,0 +1,13 @@
+package io.swagger.server.api.verticle.transfer;
+
+import model.CreateTransferRequest;
+import model.CreateTransferResponse;
+
+import io.vertx.core.AsyncResult;
+import io.vertx.core.Handler;
+
+public interface TransferControllerApi  {
+
+    void transfersPost(CreateTransferRequest request, Handler<AsyncResult<CreateTransferResponse>> handler);
+    
+}
