# controller/src/main/java/model/AccountTransferInfo.java
@@ -5,30 +5,31 @@ import com.fasterxml.jackson.annotation.JsonInclude;
 import com.fasterxml.jackson.annotation.JsonProperty;
 
 @JsonInclude(JsonInclude.Include.NON_NULL) 
-public class CreateTransactionRequest   {
+public class AccountTransferInfo   {
   
-  private Double amount;
+  private Long amount;
   private String fromAccountId;
   private String toAccountId;
-  private String transactionId;
+  private String transferId;
 
-  public CreateTransactionRequest () {
+  public AccountTransferInfo () {
 
   }
 
-  public CreateTransactionRequest (Double amount, String fromAccountId, String toAccountId, String transactionId) {
+  public AccountTransferInfo (Long amount, String fromAccountId, String toAccountId, String transferId) {
     this.amount = amount;
     this.fromAccountId = fromAccountId;
     this.toAccountId = toAccountId;
-    this.transactionId = transactionId;
+    this.transferId = transferId;
   }
 
     
   @JsonProperty("amount")
-  public Double getAmount() {
+  public Long getAmount() {
     return amount;
   }
-  public void setAmount(Double amount) {
+
+  public void setAmount(Long amount) {
     this.amount = amount;
   }
 
@@ -37,6 +38,7 @@ public class CreateTransactionRequest   {
   public String getFromAccountId() {
     return fromAccountId;
   }
+
   public void setFromAccountId(String fromAccountId) {
     this.fromAccountId = fromAccountId;
   }
@@ -46,16 +48,19 @@ public class CreateTransactionRequest   {
   public String getToAccountId() {
     return toAccountId;
   }
+
   public void setToAccountId(String toAccountId) {
     this.toAccountId = toAccountId;
   }
 
-  @JsonProperty("transactionId")
-  public String getTransactionId() {
-    return transactionId;
+    
+  @JsonProperty("transferId")
+  public String getTransferId() {
+    return transferId;
   }
-  public void setTransactionId(String transactionId) {
-    this.transactionId = transactionId;
+
+  public void setTransferId(String transferId) {
+    this.transferId = transferId;
   }
 
 
@@ -67,27 +72,27 @@ public class CreateTransactionRequest   {
     if (o == null || getClass() != o.getClass()) {
       return false;
     }
-    CreateTransactionRequest createTransactionRequest = (CreateTransactionRequest) o;
-    return Objects.equals(amount, createTransactionRequest.amount) &&
-        Objects.equals(fromAccountId, createTransactionRequest.fromAccountId) &&
-        Objects.equals(toAccountId, createTransactionRequest.toAccountId) &&
-        Objects.equals(transactionId, createTransactionRequest.transactionId);
+    AccountTransferInfo accountTransferInfo = (AccountTransferInfo) o;
+    return Objects.equals(amount, accountTransferInfo.amount) &&
+        Objects.equals(fromAccountId, accountTransferInfo.fromAccountId) &&
+        Objects.equals(toAccountId, accountTransferInfo.toAccountId) &&
+        Objects.equals(transferId, accountTransferInfo.transferId);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(amount, fromAccountId, toAccountId, transactionId);
+    return Objects.hash(amount, fromAccountId, toAccountId, transferId);
   }
 
   @Override
   public String toString() {
     StringBuilder sb = new StringBuilder();
-    sb.append("class CreateTransactionRequest {\n");
+    sb.append("class AccountTransferInfo {\n");
     
     sb.append("    amount: ").append(toIndentedString(amount)).append("\n");
     sb.append("    fromAccountId: ").append(toIndentedString(fromAccountId)).append("\n");
     sb.append("    toAccountId: ").append(toIndentedString(toAccountId)).append("\n");
-    sb.append("    transactionId: ").append(toIndentedString(transactionId)).append("\n");
+    sb.append("    transferId: ").append(toIndentedString(transferId)).append("\n");
     sb.append("}");
     return sb.toString();
   }
